working on tests

--- a/configs.ini
+++ b/configs.ini
@@ -9,6 +9,7 @@ msoffice_xml_extractor = MSOfficeXMLExtractor
 
 [[DISABLED]]
 open_office_extractor = OpenOfficeExtractor
+apple_office_extractor = AppleOfficeExtractor
 
 msoffice_extractor = MSOfficeExtractor
 pdf_extractor = PDFExtractor
