Updated Buddy Pipeline CI

--- a/buddy.yml
+++ b/buddy.yml
@@ -4,41 +4,22 @@
   ref_type: "BRANCH"
   trigger_condition: "ALWAYS"
   actions:
-  - action: "Environment Setup"
+  - action: "Build & Test"
     type: "BUILD"
     working_directory: "/buddy/mercurius"
     docker_image_name: "library/python"
     docker_image_tag: "3.6"
     execute_commands:
-    - "echo \"Setup done\""
+    - "echo \"Installing the app...\""
+    - "pip install --quiet ."
+    - "echo \"Installing the app...DONE\""
+    - "echo \"Running tests...\""
+    - "py.test --cov=mercurius --cov-report term mercurius/tests"
+    - "echo \"Running tests...DONE\""
     setup_commands:
     - "pip install --quiet pytest-cov codecov pylint"
     cached_dirs:
     - "/root/.cache/pip"
-    mount_filesystem_path: "/buddy/mercurius"
-    shell: "BASH"
-    trigger_condition: "ALWAYS"
-  - action: "Installing the app"
-    type: "BUILD"
-    working_directory: "/buddy/mercurius"
-    docker_image_name: "library/ubuntu"
-    docker_image_tag: "18.04"
-    execute_commands:
-    - "echo \"Installing the app...\""
-    - "pip install --quiet ."
-    - "echo \"Installing the app...DONE\""
-    mount_filesystem_path: "/buddy/mercurius"
-    shell: "BASH"
-    trigger_condition: "ALWAYS"
-  - action: "Running tests"
-    type: "BUILD"
-    working_directory: "/buddy/mercurius"
-    docker_image_name: "library/ubuntu"
-    docker_image_tag: "18.04"
-    execute_commands:
-    - "echo \"Running tests...\""
-    - "py.test --cov=mercurius --cov-report term mercurius/tests"
-    - "echo \"Running tests...DONE\""
     mount_filesystem_path: "/buddy/mercurius"
     shell: "BASH"
     trigger_condition: "ALWAYS"
